deploy/k8s/svc-event-messaging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-event-messaging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: svc-event-messaging
  template:
    metadata:
      labels:
        app: svc-event-messaging
    spec:
      containers:
        - name: svc-event-messaging
          image: ghcr.io/uttambhatia/healthcarepatientengagement/svc-event-messaging:latest
          ports:
            - containerPort: 8091
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8091
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8091
