deploy/k8s/svc-event-messaging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-event-messaging
spec:
  selector:
    app: svc-event-messaging
  ports:
    - port: 80
      targetPort: 8091
